--- a/views/eventView.ejs
+++ b/views/eventView.ejs
@@ -14,14 +14,10 @@
     </div>
 </section>
 
-<section class="section portfolio-single">
+<section class="section">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <img src="images/events/1.jpg" alt="" class="img-fluid w-100">
-            </div>
-
-            <div class="col-lg-6">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 text-center">
                 <div class="project-info">
                     <h3 class="mb-4"><%= new Date(eventData.date).toLocaleDateString('en-US', {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'}) %></h3>
                     <p>From <%= eventData.startTime %> to <%= eventData.endTime %></p>
@@ -194,9 +190,6 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
 </section>
 
