--- a/public/css/createEvent.css
+++ b/public/css/createEvent.css
@@ -75,12 +75,12 @@ button:hover {
 
 .main-eventCreate {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 20px;
 }
 
 .form-container {
-    width: 60%;
+    width:80%;
 }
 
 .freeAdmission {
