Fix Category Buttons

--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -4,7 +4,25 @@
         <div class="row mb-5">
             <div class="col-10">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <!-- Your radio buttons for filtering (unchanged) -->
+                    <label class="btn active ">
+    
+                        <input type="radio" name="shuffle-filter" value="all" checked="checked">All Events
+                    </label>
+                    <label class="btn">
+                        <input type="radio" name="shuffle-filter" value="comedy">Comedy
+                    </label>
+                    <label class="btn">
+                        <input type="radio" name="shuffle-filter" value="concerts">Concerts
+                    </label>
+                    <label class="btn">
+                        <input type="radio" name="shuffle-filter" value="food">Food
+                    </label>
+                    <label class="btn">
+                        <input type="radio" name="shuffle-filter" value="parties">Parties
+                    </label>
+                    <label class="btn">
+                        <input type="radio" name="shuffle-filter" value="socials">Socials
+                    </label>
                 </div>
             </div>
         </div>
